# shelbz_citrine_com_v2

./: .claude.md  .gitignore  CLAUDE.md  DESIGN_SYSTEM.md  Makefile  README.md  SPACING_GUIDE.md  launcher.config.json.example  netlify.toml  next.config.js  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  test.yml
Components/forms/: ConsultationForm.jsx
Components/landing/: AudienceSection.jsx  CollectionsSection.jsx  Footer.jsx  HeroSection.jsx  ProvenanceSection.jsx  SpinelSection.jsx  WaitlistSection.jsx
Components/layout/: Footer.jsx  Header.jsx  Section.jsx
Components/ornaments/: CornerFlourish.jsx  OrnamentalDivider.jsx
Components/sections/: CTASection.jsx  CTASection.jsx.bak  FAQSection.jsx  FAQSection.jsx.bak  (+5 more)
Entities/: WaitlistSignup.sql
Pages/: _app.js  about.jsx  checkout.jsx  consultation.jsx  index.jsx  process.jsx  store.jsx
backend/: .env.example  .gitignore  .strapi-updater.json  jest.config.js  package.json
context/: CartContext.jsx
data/: products.js
frontend/: .claude.md  .env.example  CLAUDE.md  README.md  jest.config.js  jest.setup.js  next.config.js  next.config.mjs  package.json  tsconfig.json
launcher/: README.md  tauri.conf.json
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/icons/: icon.icns
launcher/src-tauri/src/: main.rs  state.rs  tray.rs
launcher/src-tauri/src/commands/: browser.rs  deploy.rs  git.rs  icloud.rs  logs.rs  mod.rs  processes.rs  system.rs  util.rs
scripts/: generate-schema.mjs  generate-strapi-client-types.mjs
styles/: globals.css
(+383 files in other folders)
